--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "mongoose": "^5.12.2",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
