--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@chakra-ui/react": "^1.5.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.5",
     "mongoose": "^5.12.2",
     "next": "10.0.9",
     "react": "17.0.2",
