--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "framer-motion": "^4.1.5",
     "mongoose": "^5.12.2",
     "next": "^11.1.0",
