--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     ],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "no-console": "warn",
+    // "no-console": "warn",
     "no-unused-vars": "warn",
     "import/order": [
       "error",
